--- a/src/components/sections/index/HeroSection.astro
+++ b/src/components/sections/index/HeroSection.astro
@@ -1,25 +1,31 @@
 ---
-// Hero Section for Index page
+
 ---
-<section class="relative min-h-screen bg-white overflow-hidden flex items-center justify-start ">
-  <!-- Background image -->
+<section class="relative min-h-[calc(100vh-5vh)] bg-white overflow-hidden flex items-center justify-start ">
+  
   <div
     class="absolute inset-0 w-full h-full bg-center bg-cover animate-slow-zoom"
     style="background-image: url('/BM.webp');"
   ></div>
 
-  <!-- Triangle overlay -->
-  <div
-    class="absolute inset-0 w-full h-full bg-text-secondary/85 clip-triangle"
-  ></div>
+  <img
+  src="/david_photo.webp"
+  alt="Portrait of David"
+  loading="lazy"
+  decoding="async"
+  class=" min-w-[150%] md:min-w-[900px] md:w-[60%] h-auto drop-shadow-xl bottom-0  md:left-[35%] lg:left-[45%] xl-[60%] z-20 absolute"
+  />
 
-  <!-- Hero Text (uses flex now, no relative/pt-xx) -->
-  <div class="z-20 flex flex-col items-start max-w-xl px-6 text-white mb-20 ml-10">
-    <h1 class="text-5xl sm:text-7xl font-display font-extrabold uppercase leading-none">
-      I code <span class="text-yellow-400">ridiculous</span> shit
+  <!-- Triangle overlay -->
+  <div class="absolute inset-0 w-full h-full bg-text-secondary/85 clip-triangle flex mt-2 justify-end items-end overflow-visible"/>
+
+  <div class="absolute z-20  lg:left-36 top-2/3 md:top-1/2 -translate-y-1/2 flex flex-col gap-6 max-w-md pl-4 border-l-4 border-yellow-400">
+    <p class="uppercase text-sm tracking-widest text-text-primary">Full-Stack Developer</p>
+    <h1 class="text-4xl sm:text-6xl text-text-primary font-display font-bold leading-tight w-[600px] text-balance">
+      I build <span class="text-yellow-400">ridiculous</span><br /> things for the web
     </h1>
-    <p class="mt-4 text-white/80 text-xl sm:text-2xl">
-      Based in Granada & London — full-stack builder, cloud hustler, indie hacker.
+    <p class="text-black  md:text-text-primary text-base sm:text-lg ">
+      <span class="text-yellow-400  font-bold">London ⇄ Granada ·</span> Indie Hacker · Cloud Hustler
     </p>
   </div>
 
