--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import "../styles/global.css";
 import Navigation from "../components/Navigation";
+import Footer from "../components/Footer.astro";
 ---
 
 <!doctype html>
@@ -10,11 +11,9 @@ import Navigation from "../components/Navigation";
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<!-- Google Fonts -->
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-		<!-- Fontshare -->
 		<link href="https://api.fontshare.com/v2/css?f[]=bespoke-stencil@400,500,700&display=swap" rel="stylesheet">
 		<title>Portfolio</title>
 	</head>
@@ -23,12 +22,9 @@ import Navigation from "../components/Navigation";
 		<main class="pt-16">
 			<slot />
 		</main>
+		<Footer/>
+		
+		
 	</body>
 </html>
 
-<style>
-	html,
-	body {
-		
-	}
-</style>
