--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,12 +1,12 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import AboutHeroSection from '../components/sections/about/AboutHeroSection.astro';
-import MiniBioSection from '../components/sections/about/MiniBioSection.astro';
-import WhatImDoingSection from '../components/sections/about/WhatImDoingSection.astro';
+import MyPersonalSideSection from '../components/sections/about/MyPersonalSideSection.astro';
+import MyApproachSection from '../components/sections/about/MyApproachSection.astro';
 ---
 
 <Layout>
 	<AboutHeroSection />
-	<MiniBioSection />
-	<WhatImDoingSection />
+	<MyApproachSection />
+	<MyPersonalSideSection />
 </Layout>
